# QFtpServer

./: .gitignore  CMakeLists.txt  README.md
QFtpServer/: CMakeLists.txt  ftpthread.cpp  ftpthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QFtpServerCommandLine/: CMakeLists.txt  main.cpp
QFtpServerLib/: CMakeLists.txt  ftpserver.cpp  ftpserver.h
QFtpServerTests/: tst_qftpservertests.cpp
cmake/: QFtpServerLibConfig.cmake.in
